message SimpleRequest {
	required string query = 1;
	optional int32 page_number = 2;
	optional int32 results_per_page = 3;
}